src/app/herobuilder/herobuilder.component.scss
.hero-wrapper{
  width: 100%;
}
.hero-container{
   position: relative;
  .box{
        display: flex;
        justify-content: center;
        align-items: center;
  }
  .hero-layer{
    background-size: cover!important;
    width: 100%;
    height: 400px; 
    background-image:   url("../../assets/cow-hero.jpg");
    background-blend-mode: darken; 
    
    background-clip: border-box;
    background-position-x: 0.75;
    background-position-y: 50%;
    background-size: cover;
   }
  img{
    width: 100%;
  }
}


.hero-text{
  color: white;
 
  font-weight: 900;
  border-color: white;
  border-style: solid;
}


.input-wrapper{
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 10px;
  margin-bottom: 10px;

  @media screen and (max-width: 850px) {
    flex-direction: column;
    align-items: center;
    width: auto;
  }

  .input-left{
    margin: 5px;
    max-width: 420px;
    color: #ffd740;
    padding: 10px;
    border-radius: 10px;
    background-color: rgb(0,0,0,0.1);

    @media screen and (max-width:850px) {
      width: 90vw;
    }

    .input-form{
      display: flex;
      flex-direction: row;
      max-width: 400px;

       @media screen and (max-width:850px) {
        margin-right: auto;
      }


      @media screen and (max-width:430px) {
        
       /*  margin-left: 15vw;
        margin-right: 15vw; */
        flex-direction: column;
        justify-content: center;
      /*   align-items: center; */
        margin: auto;
 
        padding-left: auto;
        padding-right: auto;
      }

    }

  }
  




}

.inlinetext{
  display: inline;
  width: 50px;
  height: 48px;
  line-height: 48px;
  text-align: center;
  vertical-align: middle;

  @media screen and (max-width:430px) {

    margin-left: auto;
    margin-right: auto;
   text-align: center;
   margin-top: -30px;
   margin-bottom: 35px;
  }
}

.input-title{
  height: 48px;
  line-height: 48px;
  width: 250px;
  vertical-align: middle;
  text-align: left;
  font-size: 16px;


  @media screen and (max-width:850px) {
    width: 180px;
  }

  @media screen and (max-width:430px) {

     margin-left: auto;
     margin-right: auto;
    text-align: center;
    margin-bottom: -20px;
   }
}


::ng-deep input.mat-input-element {
  color: white;
}

::ng-deep.mat-form-field-ripple {
 /*change color of underline when focused*/
 background-color: #ffd740 !important;
}


::ng-deep .mat-form-field-wrapper{
  margin-bottom: -1.55em;
  @media screen and (max-width:430px) {
   margin-bottom: 1em;
  }
}

.code-wrapper{
  display: flex;
  justify-content: center;

  @media screen and (max-width: 850px) {
    flex-direction: column;
    align-items: center;
    width: auto;
  }


  .code-container{
  width: 40%;
  margin: 5px;
   background-color: rgba(0, 0, 0, 0.1);
   border-radius: 10px;

   @media screen and (max-width: 850px) {
    flex-direction: column;
    align-items: center;
    margin: 10px;
    width: 90%;
  }
   
  }

  .code-type{
    background-color:  rgba(0, 0, 0, 0.1);
    border-bottom: 2px solid rgb(80,80,80);
    color: #fcffe8;
    padding-left: 15px;
    font-size: 14px;
    line-height: 25px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
  }


  .code-text{
   
    height: 300px;
    background-color: rgba(43, 43, 43, 0.8);
    color: white;
    overflow-y: scroll;
    
    code{
      color: lightblue;
      margin-block-start: 0;
      margin-block-end: 0;
      margin-inline-start: 10px;
      margin-inline-end: 10px;
    }

  }



}

